# sqlfluff-pyproject

./: .sqlfluff  README.md  example.sql  pyproject.toml
